# sans

./: .gitignore  enrollment_trends.xlsx
client/: package-lock.json  package.json
client/src/app/: page.tsx
client/src/components/chat/: Chat.tsx  ChatMessage.tsx  SuggestedQueries.tsx  index.ts  types.ts
server/: main.py  pyproject.toml
server/brain/utils/: logger.py
server/routers/: chat.py
server/schemas/: chat.py
server/services/: enrollment_service.py  llm_service.py
